--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,10 @@
         <java jar="${antlr}" fork="true" failonerror="true">
             <arg value="${grammar}Lexer.g4" />
         </java>
+        <echo>java -jar ${antlr} ${grammar}Parser.g4</echo>
+        <java jar="${antlr}" fork="true" failonerror="true">
+            <arg value="${grammar}Parser.g4" />
+        </java>
     </target>
 
     <target name="clean">
@@ -43,6 +47,9 @@
             <fileset dir="." includes="${grammar}*.interp"/>
             <fileset dir="." includes="${grammar}*.tokens"/>
             <fileset dir="." includes="${grammar}Lexer.java"/>
+            <fileset dir="." includes="${grammar}Parser.java"/>
+            <fileset dir="." includes="${grammar}ParserListener.java"/>
+            <fileset dir="." includes="${grammar}ParserBaseListener.java"/>
         </delete>
     </target>
 
