--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 *.jar
+*.aux
+*.log
+*.out
+*.pdf
+*.lof
+*.lot
+*.toc
+*.fls
+*.fdb_latexmk
+*.synctex.gz
+/target
+/src/main/java/generated
+timeplan.png
