--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     ],
     "java.project.referencedLibraries": [
         "antlr-4.13.1-complete.jar"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
